Align field formatting

--- a/content/index/payment-methods/credit-card/ppv2/03-01-04-01-credit-card.adoc
+++ b/content/index/payment-methods/credit-card/ppv2/03-01-04-01-credit-card.adoc
@@ -112,27 +112,33 @@ For a full structure of a request (optional fields included), see the
 include::{root}/samples/json/WPP_CC_TransactionTypePurchase_1CreateAPaymentSessionInitialRequest.json[]
 ----
 
-[cols="20,10,10,10,5,45"]
+[%autowidth,cols="m,,,a,,"]
 |===
-2+|Field (JSON) |Data Type |Required/Optional |Size |Description
+2+h|Field (JSON) 
+h|Data +
+Type 
+h|Required/ +
+Optional 
+h|Size 
+h|Description
 
-e|merchant-account-id |value |String |Required |36 |A unique identifier
+|merchant-account-id m|value |String |Required |36 |A unique identifier
 assigned to every merchant account (by {payment-provider-name}).
-2+e|request-id |String |Required |150 a|A unique identifier assigned to every
+2+|request-id |String |Required |150 a|A unique identifier assigned to every
 request (by merchant). Used when searching for or referencing it later.
 ``{{$guid}}`` serves as a placeholder for a random ``request-id``.
 
-Allowed characters: [a-z0-9-_ ]
-2+e|transaction-type |String |Required |36 |The requested transaction type.
-.2+e|requested-amount |value |Numeric |Required |18 a|The full amount that is
+Allowed characters: ``a``-``z`` ``0``-``9`` ``-`` ``_``
+2+|transaction-type |String |Required |36 |The requested transaction type.
+.2+m|requested-amount m|value |Numeric |Required |18 a|The full amount that is
 requested/contested in a transaction. 2 decimal places allowed.
 
 Use . (decimal point) as the separator.
-|currency |String |Required |3 a|The currency of the requested/contested
+m|currency |String |Required |3 a|The currency of the requested/contested
 transaction amount.
 
 Format: 3-character abbreviation according to ISO 4217.
-e|payment-method |name |String |Optional |15 |The name of the payment method
+|payment-method m|name |String |Optional |15 |The name of the payment method
 used. Set this value to ``creditcard``.
 |===
 
@@ -142,7 +148,7 @@ used. Set this value to ``creditcard``.
 include::{root}/samples/json/WPP_CC_TransactionTypePurchase_2RtCttPPIRU.json[]
 ----
 
-[cols="25e,10,65"]
+[%autowidth,cols="m,,"]
 |===
 |Field (JSON) | Data Type | Description
 
@@ -186,18 +192,18 @@ You can find a decoded payment response example below.
 include::{root}/samples/json/WPP_CC_TransactionTypePurchase_3ParseAndProcessThePaymentResponseDecodedPaymentResponse.json[]
 ----
 
-[cols="20,10,5,65"]
+[%autowidth,cols="m,,,"]
 |===
 2+|Field (JSON) |Data Type |Description
 
-2+e|api-id |String |Identifier of the currently used API.
-2+e|first-name |String |The first name of the account holder.
-2+e|last-name |String |The last name of the account holder.
-2+e|request-id |String |A unique identifier assigned to every request
+2+|api-id |String |Identifier of the currently used API.
+2+|first-name |String |The first name of the account holder.
+2+|last-name |String |The last name of the account holder.
+2+|request-id |String |A unique identifier assigned to every request
 (by merchant). Used when searching for or referencing to it later.
-e|merchant-account-id |value |String |A unique identifier assigned to every
+|merchant-account-id m|value |String |A unique identifier assigned to every
 merchant account (by {payment-provider-name}).
-2+e|transaction-state |String a|The current transaction state.
+2+|transaction-state |String a|The current transaction state.
 
 Possible values:
 
@@ -210,24 +216,24 @@ Possible values:
 Typically, a transaction starts with state _in-progress_ and finishes with
 state either _success_ or _failed_. This information is returned in the response
 only.
-e|payment-method |name |String |The name of the payment method used for the
+|payment-method m|name |String |The name of the payment method used for the
 transaction.
-2+e|transaction-type |String |The requested transaction type.
-2+e|token-id |String |A unique identifier assigned to every card token.
-2+e|masked-account-number |String |The masked code that represents the account
+2+|transaction-type |String |The requested transaction type.
+2+|token-id |String |A unique identifier assigned to every card token.
+2+|masked-account-number |String |The masked code that represents the account
 (card) number used in the transaction.
-2+e|transaction-id |String |A unique identifier assigned to every transaction
+2+|transaction-id |String |A unique identifier assigned to every transaction
 (by {payment-provider-name}). Used when searching for or referencing to it later.
-2+e|completion-time-stamp |YYYY-MM-DD-Thh:mm:ss a|The UTC/ISO time-stamp
+2+|completion-time-stamp |YYYY-MM-DD-Thh:mm:ss a|The UTC/ISO time-stamp
 documents the time & date when the transaction was executed.
 
 Format: YYYY-MM-DDThh:mm:ss (ISO).
-.2+e|requested-amount |currency |String a|The currency of the
+.2+|requested-amount m|currency |String a|The currency of the
 requested/contested transaction amount.
 
 Format: 3-character abbreviation according to ISO 4217.
 |value |Numeric |The full amount that is requested/contested in a transaction.
-.3+e|status |description |String |The description of the transaction status message.
+.3+|status m|description |String |The description of the transaction status message.
 |severity |String a|The definition of the status message.
 
 Possible values:
@@ -239,8 +245,8 @@ Possible values:
 //-
 
 |code |String |Status code of the status message.
-2+e|authorization-code |String |Provider authorization code.
-2+e|descriptor |String |Description of the transaction for account holder's
+2+|authorization-code |String |Provider authorization code.
+2+|descriptor |String |Description of the transaction for account holder's
 bank statement purposes.
 |===
 
@@ -295,27 +301,33 @@ For a full structure of a request (optional fields included), see the
 include::{root}/samples/json/WPP_CC_TransactionTypeAuthorization_1CreateAPaymentSessionInitialRequest.json[]
 ----
 
-[cols="20,10,10,10,5,45"]
+[%autowidth, cols="m,,a,a,,"]
 |===
-2+|Field (JSON) |Data Type |Required/Optional |Size |Description
+2+h|Field (JSON) 
+h|Data +
+Type 
+h|Required/ +
+Optional 
+h|Size 
+h|Description
 
-e|merchant-account-id |value |String |Required |36 |A unique identifier
+|merchant-account-id m|value |String |Required |36 |A unique identifier
 assigned to every merchant account (by {payment-provider-name}).
-2+e|request-id |String |Required |150 a|A unique identifier assigned to every
+2+|request-id |String |Required |150 a|A unique identifier assigned to every
 request (by merchant). Used when searching for or referencing it later.
 ``{{$guid}}`` serves as a placeholder for a random ``request-id``.
 
 Allowed characters: [a-z 0-9 - _ ]
-2+e|transaction-type |String |Required |36 |The requested transaction type.
-.2+e|requested-amount |value |Numeric |Required |18 a|The full amount that is
+2+|transaction-type |String |Required |36 |The requested transaction type.
+.2+|requested-amount m|value |Numeric |Required |18 a|The full amount that is
 requested/contested in a transaction. 2 decimal places allowed.
 
 Use . (decimal point) as the separator.
-|currency |String |Required |3 a|The currency of the requested/contested
+m|currency |String |Required |3 a|The currency of the requested/contested
 transaction amount.
 
 Format: 3-character abbreviation according to ISO 4217.
-e|payment-method |name |String |Optional |15 |The name of the payment method
+|payment-method m|name |String |Optional |15 |The name of the payment method
 used. Set this value to ``creditcard``.
 |===
 
@@ -368,18 +380,18 @@ You can find a decoded payment response example below.
 include::{root}/samples/json/WPP_CC_TransactionTypeAuthorization_AuthorizationResponse.json[]
 ----
 
-[cols="20,10,5,65"]
+[%autowidth,cols="m,,,"]
 |===
 2+|Field (JSON) |Data Type |Description
 
-2+e|api-id |String |Identifier of the currently used API.
-2+e|first-name |String |The first name of the account holder.
-2+e|last-name |String |The last name of the account holder.
-2+e|request-id |String |A unique identifier assigned to every request
+2+|api-id |String |Identifier of the currently used API.
+2+|first-name |String |The first name of the account holder.
+2+|last-name |String |The last name of the account holder.
+2+|request-id |String |A unique identifier assigned to every request
 (by merchant). Used when searching for or referencing to it later.
-e|merchant-account-id |value |String |A unique identifier assigned to
+|merchant-account-id m|value |String |A unique identifier assigned to
 every merchant account (by {payment-provider-name}).
-2+e|transaction-state |String a|The current transaction state.
+2+|transaction-state |String a|The current transaction state.
 
 Possible values:
 
@@ -392,24 +404,24 @@ Possible values:
 Typically, a transaction starts with state _in-progress_ and finishes with
 state either _success_ or _failed_. This information is returned in the response
 only.
-e|payment-method |name |String |The name of the payment method used for the
+|payment-method m|name |String |The name of the payment method used for the
 transaction.
-2+e|transaction-type |String |The requested transaction type.
-2+e|token-id |String |A unique identifier assigned to every card token.
-2+e|masked-account-number |String |The masked code that represents the account
+2+|transaction-type |String |The requested transaction type.
+2+|token-id |String |A unique identifier assigned to every card token.
+2+|masked-account-number |String |The masked code that represents the account
 (card) number used in the transaction.
-2+e|transaction-id |String |A unique identifier assigned to every transaction
+2+|transaction-id |String |A unique identifier assigned to every transaction
 (by {payment-provider-name}). Used when searching for or referencing to it later.
-2+e|completion-time-stamp |YYYY-MM-DD-Thh:mm:ss a|The UTC/ISO time-stamp
+2+|completion-time-stamp |YYYY-MM-DD-Thh:mm:ss a|The UTC/ISO time-stamp
 documents the time & date when the transaction was executed.
 
 Format: YYYY-MM-DDThh:mm:ss (ISO).
-.2+e|requested-amount |currency |String a|The currency of the requested/contested
+.2+|requested-amount m|currency |String a|The currency of the requested/contested
 transaction amount.
 
 Format: 3-character abbreviation according to ISO 4217.
 |value |Numeric |The full amount that is requested/contested in a transaction.
-.3+e|status |description |String |The description of the transaction status message.
+.3+|status m|description |String |The description of the transaction status message.
 |severity |String a|The definition of the status message.
 
 Possible values:
@@ -421,8 +433,8 @@ Possible values:
 //-
 
 |code |String |Status code of the status message.
-2+e|authorization-code |String |Provider authorization code.
-2+e|descriptor |String |Description of the transaction for account holder's
+2+|authorization-code |String |Provider authorization code.
+2+|descriptor |String |Description of the transaction for account holder's
 bank statement purposes.
 |===
 
@@ -479,19 +491,25 @@ For a full structure of a request (optional fields included), see the
 include::{root}/samples/json/WPP_CC_TransactionTypeAuthorizationonly_1CreateAPaymentSessionInitialRequest.json[]
 ----
 
-[cols="20,10,10,10,5,45"]
+[%autowidth,cols="m,,a,a,,"]
 |===
-2+|Field (JSON) |Data Type |Required/Optional |Size |Description
+2+h|Field (JSON) 
+h|Data +
+Type 
+h|Required/ +
+Optional 
+h|Size 
+h|Description
 
-e|merchant-account-id |value |String |Required |36 |A unique identifier
+|merchant-account-id m|value |String |Required |36 |A unique identifier
 assigned to every merchant account (by {payment-provider-name}).
-2+e|request-id |String |Required |150 a|A unique identifier assigned to every
+2+|request-id |String |Required |150 a|A unique identifier assigned to every
 request (by merchant). Used when searching for or referencing it later.
 ``{{$guid}}`` serves as a placeholder for a random ``request-id``.
 
 Allowed characters: [a-z0-9-_]
-2+e|transaction-type |String |Required |36 |The requested transaction type.
-.2+e|requested-amount |value |Numeric |Required |18 a|The full amount that is
+2+|transaction-type |String |Required |36 |The requested transaction type.
+.2+|requested-amount m|value |Numeric |Required |18 a|The full amount that is
 requested/contested in a transaction. 2 decimal places allowed.
 _authorization-only_ transactions require a zero requested amount.
 
@@ -500,7 +518,7 @@ Use . (decimal point) as the separator.
 transaction amount.
 
 Format: 3-character abbreviation according to ISO 4217.
-e|payment-method |name |String |Optional |15 |The name of the payment method
+|payment-method m|name |String |Optional |15 |The name of the payment method
 used. Set this value to ``creditcard``.
 |===
 
@@ -510,7 +528,7 @@ used. Set this value to ``creditcard``.
 include::{root}/samples/json/WPP_CC_TransactionTypeAuthorizationonly_2RtCttPPIRU.json[]
 ----
 
-[cols="25e,10,65"]
+[%autowidth,cols="m,,"]
 |===
 |Field (JSON) | Data Type | Description
 
@@ -554,18 +572,18 @@ You can find a decoded payment response example below.
 include::{root}/samples/json/WPP_CC_TransactionTypeAuthorizationonly_3ParseAndProcessThePaymentResponseDecodedPaymentResponse.json[]
 ----
 
-[cols="20,10,5,65"]
+[%autowidth,cols="m,,,"]
 |===
 2+|Field (JSON) |Data Type |Description
 
-2+e|api-id |String |Identifier of the currently used API.
-2+e|first-name |String |The first name of the account holder.
-2+e|last-name |String |The last name of the account holder.
-2+e|request-id |String |A unique identifier assigned to every request
+2+|api-id |String |Identifier of the currently used API.
+2+|first-name |String |The first name of the account holder.
+2+|last-name |String |The last name of the account holder.
+2+|request-id |String |A unique identifier assigned to every request
 (by merchant). Used when searching for or referencing to it later.
-e|merchant-account-id |value |String |A unique identifier assigned to every
+|merchant-account-id m|value |String |A unique identifier assigned to every
 merchant account (by {payment-provider-name}).
-2+e|transaction-state |String a|The current transaction state.
+2+|transaction-state |String a|The current transaction state.
 
 Possible values:
 
@@ -578,24 +596,24 @@ Possible values:
 Typically, a transaction starts with state _in-progress_ and finishes with
 state either _success_ or _failed_. This information is returned in the response
 only.
-e|payment-method |name |String |The name of the payment method used for the
+|payment-method m|name |String |The name of the payment method used for the
 transaction.
-2+e|transaction-type |String |The requested transaction type.
-2+e|token-id |String |A unique identifier assigned to every card token.
-2+e|masked-account-number |String |The masked code that represents the account
+2+|transaction-type |String |The requested transaction type.
+2+|token-id |String |A unique identifier assigned to every card token.
+2+|masked-account-number |String |The masked code that represents the account
 (card) number used in the transaction.
-2+e|transaction-id |String |A unique identifier assigned to every transaction
+2+|transaction-id |String |A unique identifier assigned to every transaction
 (by {payment-provider-name}). Used when searching for or referencing to it later.
-2+e|completion-time-stamp |YYYY-MM-DD-Thh:mm:ss a|The UTC/ISO time-stamp
+2+|completion-time-stamp |YYYY-MM-DD-Thh:mm:ss a|The UTC/ISO time-stamp
 documents the time & date when the transaction was executed.
 
 Format: YYYY-MM-DDThh:mm:ss (ISO).
-.2+e|requested-amount |currency |String a|The currency of the
+.2+|requested-amount m|currency |String a|The currency of the
 requested/contested transaction amount.
 
 Format: 3-character abbreviation according to ISO 4217.
 |value |Numeric |The full amount that is requested/contested in a transaction.
-.3+e|status |description |String |The description of the transaction status
+.3+|status m|description |String |The description of the transaction status
 message.
 |severity |String a|The definition of the status message.
 
@@ -608,8 +626,8 @@ Possible values:
 //-
 
 |code |String |Status code of the status message.
-2+e|authorization-code |String |Provider authorization code.
-2+e|descriptor |String |Description of the transaction for account holder's
+2+|authorization-code |String |Provider authorization code.
+2+|descriptor |String |Description of the transaction for account holder's
 bank statement purposes.
 |===
 
@@ -655,7 +673,7 @@ Here you can
 include::{root}/samples/json/WPP_CC_JSONNVPField_JSON_StructureForCreditCardRequests.json[]
 ----
 
-[cols="e,e,e"]
+[%autowidth,cols="m,m,m"]
 |===
 |Field (NVP) |Field (JSON) |JSON Parent
 
@@ -702,7 +720,7 @@ include::{root}/samples/json/WPP_CC_JSONNVPField_JSON_StructureForCreditCardRequ
 include::{root}/samples/json/WPP_CC_JSONNVPFieldResponseonly.json[]
 ----
 
-[cols="e,e,e"]
+[%autowidth,cols="m,m,m"]
 |===
 |Field (NVP) |Field (JSON) |JSON Parent
 
@@ -795,19 +813,25 @@ For a full structure of a request (optional fields included), see the
 include::{root}/samples/json/WPP_CC_3DSecureTestCredentialsAdditional_1CreateAPaymentSessionInitialRequest.json[]
 ----
 
-[cols="20,10,10,10,5,45"]
+[%autowidth,cols="m,,a,a,,"]
 |===
-2+|Field (JSON) |Data Type |Required/Optional |Size |Description
+2+h|Field (JSON) 
+h|Data +
+Type 
+|Required/ +
+Optional 
+|Size 
+|Description
 
-e|merchant-account-id |value |String |Required |36 |A unique identifier
+|merchant-account-id m|value |String |Required |36 |A unique identifier
 assigned to every merchant account (by {payment-provider-name}).
-2+e|request-id |String |Required |150 a|A unique identifier assigned to every
+2+|request-id |String |Required |150 a|A unique identifier assigned to every
 request (by merchant). Used when searching for or referencing it later.
 ``{{$guid}}`` serves as a placeholder for a random ``request-id``.
 
 Allowed characters: [a-z 0-9 - _ ]
-2+e|transaction-type |String |Required |36 |The requested transaction type.
-.2+e|requested-amount |value |Numeric |Required |18 a|The full amount that is
+2+|transaction-type |String |Required |36 |The requested transaction type.
+.2+|requested-amount m|value |Numeric |Required |18 a|The full amount that is
 requested/contested in a transaction. 2 decimal places allowed.
 
 Use . (decimal point) as the separator.
@@ -815,9 +839,9 @@ Use . (decimal point) as the separator.
 transaction amount.
 
 Format: 3-character abbreviation according to ISO 4217.
-e|payment-method |name |String |Optional |15 |The name of the payment method
+|payment-method m|name |String |Optional |15 |The name of the payment method
 used. Set this value to ``creditcard``.
-2+e|attempt-three-d |Boolean |Conditional |N/A |Required for 3D Secure
+2+|attempt-three-d |Boolean |Conditional |N/A |Required for 3D Secure
 transactions. Indicates whether 3D Secure authentication is enabled for the
 transaction.
 |===
@@ -828,7 +852,7 @@ transaction.
 include::{root}/samples/json/WPP_CC_3DSecureTestCredentialsAdditional_2RtCttPPIRU.json[]
 ----
 
-[cols="25e,10,65"]
+[%autowidth,cols="m,,"]
 |===
 |Field (JSON) | Data Type | Description
 
@@ -887,12 +911,12 @@ cardholder is enrolled.
 or the card issuing bank does not handle the transaction as 3D Secure.
 (ECI Value: 07 - VISA/JCB/American Express; 00 - Mastercard)
 
-[cols="20,10,5,65"]
+[%autowidth,cols="m,,,"]
 |===
 2+|Field (JSON) |Data Type |Description
 
-2+e|authorization-code |String |Provider authorization code.
-2+e|transaction-state |String a|The current transaction state.
+2+|authorization-code |String |Provider authorization code.
+2+|transaction-state |String a|The current transaction state.
 
 Possible values:
 
@@ -904,17 +928,17 @@ Possible values:
 
 Typically, a transaction starts with state _in-progress_ and finishes with
 state either _success_ or _failed_. This information is returned in the response only.
-e|merchant-account-id |value |String |A unique identifier assigned to every
+|merchant-account-id m|value |String |A unique identifier assigned to every
 merchant account (by {payment-provider-name}).
-.2+e|card-token |token-id |String |A unique identifier assigned to every card
+.2+|card-token m|token-id |String |A unique identifier assigned to every card
 token.
 |masked-account-number |String |The masked code that represents the account
 (card) number used in the transaction.
-2+e|csc-code |String |Code indicating Card Verification Value (CVV/CVC)
+2+|csc-code |String |Code indicating Card Verification Value (CVV/CVC)
 verification results.
-.2+e|account-holder |first-name |String |The first name of the account holder.
+.2+|account-holder m|first-name |String |The first name of the account holder.
 |last-name |String |The last name of the account holder.
-.3+e|status |description |String |The description of the transaction status
+.3+|status m|description |String |The description of the transaction status
 message.
 |severity |String a|The definition of the status message.
 
@@ -927,27 +951,27 @@ Possible values:
 //-
 
 |code |String |Status code of the status message.
-.2+e|custom-field |field-name |String |
+.2+|custom-field m|field-name |String |
 |field-value |String |
-2+e|parent-transaction-id |String |The unique identifier of a transaction that
+2+|parent-transaction-id |String |The unique identifier of a transaction that
 is being referenced (sometimes referred to as the "original transaction").
-2+e|api-id |String |Description of the transaction for account holder's bank
+2+|api-id |String |Description of the transaction for account holder's bank
 statement purposes.
-e|iso |approval-code |String |Authentication ID of the response
-e|payment-method |name |String |The name of the payment method used for the
+|iso m|approval-code |String |Authentication ID of the response
+|payment-method m|name |String |The name of the payment method used for the
 transaction.
-2+e|transaction-id |String |A unique identifier assigned to every transaction
+2+|transaction-id |String |A unique identifier assigned to every transaction
 (by {payment-provider-name}). Used when searching for or referencing to it later.
-2+e|completion-time-stamp |YYYY-MM-DD-Thh:mm:ss a|The UTC/ISO time-stamp
+2+|completion-time-stamp |YYYY-MM-DD-Thh:mm:ss a|The UTC/ISO time-stamp
 documents the time & date when the transaction was executed.
 
 Format: YYYY-MM-DDThh:mm:ss (ISO).
-.2+e|requested-amount |currency |String a|The currency of the
+.2+|requested-amount m|currency |String a|The currency of the
 requested/contested transaction amount.
 
 Format: 3-character abbreviation according to ISO 4217.
 |value |Numeric |The full amount that is requested/contested in a transaction.
-.4+e|card |merchant-tokenization-flag |Boolean |Indicates whether Cardholder
+.4+|card m|merchant-tokenization-flag |Boolean |Indicates whether Cardholder
 card data was stored by the Merchant for future transactions. Maps to the
 Visa field _Stored Credential._
 |card-type |String |The type/provider of the card used in the transaction.
@@ -955,7 +979,7 @@ Visa field _Stored Credential._
 transaction.
 |expiration-year |Numeric |The expiration year of the card used in the
 transaction.
-.5+e|three-d |eci |String |ECI (Electronic Commerce Indicator) indicates the
+.5+|three-d m|eci |String |ECI (Electronic Commerce Indicator) indicates the
 3D authentication results. This value is returned from the card provider's
 directory server.
 |xid |String |Unique transaction identifier in the 3D Secure process provided
@@ -971,8 +995,8 @@ Value (AAV) or Universal Cardholder Authentication Field (UCAF).
 |attempt-three-d |Boolean |Indicates whether the transaction should use the
 3D Secure workflow.
 |cardholder-authentication-status |String |Result of the 3D Secure check.
-2+e|transaction-type | String |The requested transaction type.
-2+e|request-id |String |A unique identifier assigned to every request
+2+|transaction-type | String |The requested transaction type.
+2+|request-id |String |A unique identifier assigned to every request
 (by merchant). Used when searching for or referencing to it later.
 |===
 
