Close lists, make fields monospace, fix wording

--- a/content/index/payment-methods/sepa/rest/11-29-02-sepa-direct-debit.adoc
+++ b/content/index/payment-methods/sepa/rest/11-29-02-sepa-direct-debit.adoc
@@ -35,14 +35,14 @@ at <<AppendixB,  Transaction Types>>.
 |===
 | Transaction Type | Description | Link to the Samples
 
-| _authorization_ | Verifies payment details for structural validity and/or generates a reference ID for the merchant (not mandatory).
+| authorization | Verifies payment details for structural validity and/or generates a reference ID for the merchant (not mandatory).
 | See <<SEPADirectDebit_Samples_Authorization, samples>>.
-| _pending-debit_ | Transaction is processed in the {payment-gateway}. | 
-| _void-pending-debit_ | Voids a _pending-debit._ +
+| pending-debit | Transaction is processed in the {payment-gateway}. | 
+| void-pending-debit | Voids a _pending-debit._ +
 Only available when the <<SEPA_TransactionType_Void_Restrictions, restrictions>> are met.
 | See <<SEPADirectDebit_Samples_VoidPendingDebit, samples>>.
-| _debit_ | Transaction is processed by Wirecard Bank. |
-| _debit-return_ | The payment is returned by the consumer bank. See <<SEPA_ReturnCodes, Return Codes>>. |
+| debit | Transaction is processed by Wirecard Bank. |
+| debit-return | The payment is returned by the consumer bank. See <<SEPA_ReturnCodes, Return Codes>>. |
 |===
 
 [#SEPADirectDebit_TransactionTypes_Recurring]
@@ -69,6 +69,7 @@ transactions must meet the following restrictions:
 - The _Account Holder IBAN_, _Account Holder BIC_, _Account Holder Name_, _Creditor ID_, _Mandate ID_, and _Mandate Signature Date_ must be
 the same for _recurring_ and _final_ transactions as was provided in the
 _first_ transaction.
+
 //-
 
 The following figure describes a possible flow of sequence types:
@@ -91,6 +92,7 @@ This results in the following:
 of the same group of transactions.
 - Fields provided in the _first_ _pending-debit_ will be copied into the
 _recurring_ or _final_ _pending-debit._
+
 //-
 
 If the merchant does not want any information to be copied, the
@@ -116,6 +118,7 @@ _first_ _pending-debit_ will NOT be copied:
 - mandate
 - airline industry
 - cruise industry
+
 //-
 ====
 
@@ -161,6 +164,7 @@ _authorization_ transaction are the following:
 _authorization_; or
 - to validate an end-customer's banking details before sending in a
 _pending-debit_ at a different time
+
 //-
 
 [#SEPADirectDebit_TransactionTypes_Authorization_Referencing]
@@ -176,6 +180,7 @@ This results in the following:
 of the same payment.
 - Fields provided in the _authorization_ will be copied into the
 _pending-debit_.
+
 //-
 
 If the merchant does not want any information to be copied, the
@@ -257,6 +262,7 @@ transaction will then be forwarded the Central Bank for processing.
 transaction on status _Failed_ will be created and the transaction will
 not be sent to the Central Bank.
 . The merchant will receive a notification of the _debit_ transaction.
+
 //-
 
 NOTE: Although a transaction has been successfully processed by the merchant's
@@ -287,7 +293,7 @@ The following elements are mandatory (M), optional (O) or conditional
 \(C) for a request/response/notification. If the respective cell is
 empty, the field is disregarded or not sent.
 
-[%autowidth, cols="1,2,3,4,5,6,7a"]
+[%autowidth, cols="1m,2,3,4,5,6,7a"]
 |===
 | Field | Request | Response | Notification | Datatype | Size | Description
 
@@ -354,7 +360,7 @@ The following fields are required *additionally* for a _Recurring_ transaction.
 
 The following elements are mandatory (M), optional (O) or conditional \(C) for a request/response/notification.
 
-[%autowidth, cols="1,2,3,4,5,6,7"]
+[%autowidth, cols="1m,2,3,4,5,6,7"]
 |===
 | Field | Cardinality (Request) | Response | Notification | Datatype | Size | Description
 
@@ -393,6 +399,7 @@ The following elements should be kept in mind when sending in a _SEPA Direct Deb
 - Mandate Signature Date
 - Provider Transaction Reference ID
 - Due Date
+
 //-
 
 [#SEPADirectDebit_Fields_SpecificFields_CreditorID]
@@ -491,6 +498,7 @@ requires merchants to submit
 
 - all transactions, regardless of sequence type, at least three (3)
 banking days before the due date
+
 //-
 
 [NOTE]
@@ -514,6 +522,7 @@ non-banking days. These include:
 - 1 May (Labour Day)
 - Christmas Day
 - 26 December
+
 //-
 ====
 
