--- a/content/index/payment-methods/voucher/rest/11-37-wirecard-voucher.adoc
+++ b/content/index/payment-methods/voucher/rest/11-37-wirecard-voucher.adoc
@@ -85,7 +85,7 @@ be present.
 The following elements are either mandatory (M), optional (O) or
 conditional \(C) in a transaction process.
 
-[cols="v,,,,,,"]
+[cols="m,,,,,,"]
 |===
 | Field               | Request | Response | Notification | Data Type    | Size | Description
 
