--- a/content/index/payment-processing/08-01-cross-referencing.adoc
+++ b/content/index/payment-processing/08-01-cross-referencing.adoc
@@ -147,6 +147,7 @@ include::{root}/samples/json/GeneralPlatformFeaturesCrossMerchantSamplesRecurrin
 ----
 include::{root}/samples/json/GeneralPlatformFeaturesCrossMerchantSamplesRecurringJson_JSON_SEPA_CreditResponseCrossMerchantPayment.json[]
 ----
+
 [#GeneralPlatformFeatures_CrossPayment]
 === Payment Methods
 
@@ -165,6 +166,7 @@ The main reasons for returned SEPA Direct Debit transaction are:
 
 - "Bank account not existing"
 - "Invalid bank data"
+
 //-
 
 Cross-Payment-Methods Referencing is available, when the merchant has
@@ -172,6 +174,7 @@ Cross-Payment-Methods Referencing is available, when the merchant has
 - several online banking payment methods configured within MAID.
 - installed {payment-gateway} backend and
 Payment Page integrations.
+
 //-
 
 Cross-Payment-Methods Referencing is executed in two steps:
@@ -182,6 +185,7 @@ the supported online banking payment methods:
 * iDEAL
 * giropay
 * eps-Überweisung
+
 //-
 
 If the initial transaction is successful, the bank details IBAN and BIC
@@ -223,6 +227,7 @@ The advantages, setting it in the subsequent transaction are:
 not need to be amended.
 - If you are using SEPA as an additional payment option, the behavior
 where to send the periodic tags is identical.
+
 //-
 
 NOTE: API Endpoint for referenced transactions for alternative payment methods
@@ -253,7 +258,7 @@ include::{root}/samples/xml/ideal_get-url_request__installment_first_f11a91.xml[
 include::{root}/samples/xml/ideal_get-url_response__installment_first_7f38b0.xml[]
 ----
 
-.XML Debit Notification for Initial iDEAL
+.XML debit Notification for Initial iDEAL
 
 [source,xml,subs=attributes+]
 ----
