--- a/content/index/payment-processing/08-05-instrument-country-bounceback.adoc
+++ b/content/index/payment-processing/08-05-instrument-country-bounceback.adoc
@@ -5,9 +5,9 @@
 companies established in a EU member state and supply
 telecommunications, broadcasting and electronic services in the
 e-commerce business. The company must charge the VAT of the EU country
-the end consumer belongs to.*
+the consumer belongs to.*
 
-The bounce back feature can be used by transmitting the a two-digit
+The bounce back feature can be used by transmitting the two-digit
 country code via:
 
 *``<instrument-country></instrument-country>``*
@@ -19,7 +19,7 @@ It is available for the following payment methods:
 - Paypal
 - Sofort.
 - iDEAL
-- Giropay (if an IBAN is sent)
+- giropay (if an IBAN is sent)
 - Carrier Billing
 
 //-
