--- a/content/index/payment-processing/08-04-redirect-url.adoc
+++ b/content/index/payment-processing/08-04-redirect-url.adoc
@@ -1,35 +1,35 @@
 [#GeneralPlatformFeatures_RedirectURL]
-== Redirect-URL
+== Redirect URL
 
-A payment process needs a redirect-URL. If no redirect-URL is defined at
+A payment process needs a redirect URL. If no redirect URL is defined at
 all, the transaction will not be processed.
 
 The merchant can send a redirect URL in case of a successful, a
 cancelled or a failed transaction. Depending on the result of the
-transaction the consumer will be redirected to the corresponding page of
+transaction, the consumer will be redirected to the corresponding page of
 the merchant's environment.
 
-The redirect-URLs can be configured either on MAID level or they can be
+The redirect URLs can be configured either on MAID level or they can be
 sent individually with each request.
 
-When the merchant configures the redirect-URLs in the MAID, they don't
-have to be present in the request. The redirect-URLs are automatically
+When the merchant configures the redirect URLs in the MAID, they don't
+have to be present in the request. The redirect URLs are automatically
 loaded from the MAID configuration.
 
-When the merchant determines the redirect-URLs in the request, the
-request's redirect-URLs overwrite the MAID configuration for that
+When the merchant determines the redirect URLs in the request, the
+request's redirect URLs overwrite the MAID configuration for that
 particular transaction.
 
-The merchant can determine up to three different redirect-URLs in one request.
-In that case the merchant can determine one success-URL, one for failure and
-one cancellation-URL.
+The merchant can determine up to three different redirect URLs in one request.
+In that case the merchant can determine one success URL, one for failure and
+one cancellation URL.
 
 [#GeneralPlatformFeatures_RedirectURL_MAID]
 === Configured in MAID
 
-In this request the redirect-URLs are configured on MAID level.
+In this request the redirect URLs are configured on MAID level.
 
-.General Request Sample for Redirect-URL
+.General Request Sample for Redirect URL
 
 [source,xml,subs=attributes+]
 ----
