--- a/content/index/payment-processing/08-06-merchant-account-resolving.adoc
+++ b/content/index/payment-processing/08-06-merchant-account-resolving.adoc
@@ -2,7 +2,7 @@
 == Merchant Account Resolving
 
 _Merchant Account Resolving_ allows the merchant to create a transaction
-without a specific Merchant Account ID (MAID) present in time of
+without a specific Merchant Account ID (MAID) present in time of the 
 transaction request. Instead of the MAID, a Super Merchant ID and a
 Resolver Category Code is sent in the request and a _specific MAID_ used
 for payment is automatically calculated by the Payment Processor Engine
@@ -10,8 +10,8 @@ during payment processing. The calculation is based on
 <<GeneralPlatformFeatures_ResolvingRules, resolving rules>>.
 Resolving rules define the logic for choosing the _specific MAID_.
 
-If the merchant wants to use the Resolver feature he must get in contact
-with the Merchant Support. The Merchant Support will do all the
+If the merchant wants to use the resolver feature, they must get in contact
+with Merchant Support. Merchant Support will do all the
 necessary customizing.
 
 [#GeneralPlatformFeatures_ResolvingRules]
@@ -21,18 +21,18 @@ Resolving rules define the logic for the resolver engine. Based on these
 rules a _final MAID_ is selected and used for the payment process. The
 rules are logic expressions and several rules with a different priority
 can be defined. The first rule that matches the conditions is
-automatically processed and appropriate MAID is used. Other rules with
-lower priority are ignored. These rules are configured by our Merchant
-Support team based on the Merchant's specific requirements.
+automatically processed and the appropriate MAID is used. Other rules with
+lower priority are ignored. These rules are configured by Merchant
+Support based on the merchant's specific requirements.
 
 [#GeneralPlatformFeatures_ResolverCategoryCode]
-=== Resolver Category Code
+=== Resolver Category
 
-_Resolver Category Code_ is a field that defines groups of several
+``merchant-account-resolver-category`` is a field that defines groups of several
 resolving rules. This allows the merchant to define more sets of
-resolving rules and lets him decide which will be used for resolving in
-time of payment request. Merchant Support provides the value to merchant
-when sets of rules are configured.
+resolving rules and lets them decide which will be used for resolving in
+time of the payment request. Merchant Support provides the value to the merchant
+when the sets of rules are configured.
 
 [#GeneralPlatformFeatures_ResolvingPaymentMethods]
 === Supported Payment Methods
@@ -49,7 +49,7 @@ Resolving rules for Credit Cards can be based on:
 - BIN routing for different fraud rule handling
 - BIN routing for different acquirer handling
 - Routing based on Credit Card brand
-- Routing based on Amount
+- Routing based on amount
 - Routing based on custom parameters
 
 //-
@@ -58,11 +58,12 @@ Resolving rules for Credit Cards can be based on:
 === Super Merchant
 
 Super Merchant or Super Merchant ID is basically a group of several
-MAIDs. When the merchant does not send a MAID specifically in the
-request, Resolver needs to know a set of several MAIDs to choose from.
-Basically it's like an Account ID superior to several MAIDs. the
-Merchant Support configures Super Merchant and its inherent MAIDs.
+MAIDs. When the merchant does not send a specific MAID in the
+request, the resolver needs to know a set of several MAIDs to choose from.
+The Super Merchant is like an account ID superior to several MAIDs. Merchant Support configures the Super Merchant and its inherent MAIDs.
 
 NOTE: The payment *response* (structured payment by seamless or message POST
 to merchant's page) *contains* resolved merchant and *signature computed
 with secret key of resolved merchant*.
+
+//-
