--- a/content/index/payment-processing/08-07-transactions.adoc
+++ b/content/index/payment-processing/08-07-transactions.adoc
@@ -59,7 +59,7 @@ with a specific transaction type. It depends on the payment method,
 which transaction types apply. Currently the {payment-gateway}
 supports recurring transactions with the payment methods <<CreditCard, Credit Card>>
 , <<API_PaymentMethods_PayPal, PayPal>>, and <<SEPA>>.
-If the merchant wants to use recurring transactions the request must
+If the merchant wants to use recurring transactions, the request must
 provide the corresponding PERIODIC TYPE and a SEQUENCE TYPE.
 
 [#GeneralPlatformFeatures_Transactions_Recurring_Periodic]
@@ -69,7 +69,7 @@ The *PERIODIC TYPE* element is chosen specifically by the merchant and
 depends on the merchant's business model. One of the following two
 periodic types must be chosen:
 
-- *_installment_:* one in a set that completes a financial transaction
+- *_installment_*: one in a set that completes a financial transaction
 and
 - *_recurring_*: one in a set that occurs repeatedly, such as a
 subscription.
@@ -114,6 +114,8 @@ this series.
 - Only one periodic type may be used for the complete series of
 recurring payments. This means that the periodic type in a subsequent
 transaction must match the periodic type sent in the _first_ request.
+
+//-
 
 [#GeneralPlatformFeatures_RetrieveTransaction]
 === Retrieve a Transaction
