--- a/content/index/payment-processing/08-02-ipn.adoc
+++ b/content/index/payment-processing/08-02-ipn.adoc
@@ -11,6 +11,7 @@ There are two types of notifications:
 
 - *HTTP(S)* (Web Server POST)
 - *SMTP* (Email prefixed with 'mailto')
+
 //-
 
 The following formats are currently supported:
@@ -19,6 +20,7 @@ The following formats are currently supported:
 - application/xml
 - application/json
 - application/json-signed
+
 //-
 
 [#GeneralPlatformFeatures_IPN_Configuration]
@@ -29,6 +31,7 @@ When the merchant wants to receive a notification, he can either
 - specify a URL as part the merchant account setup; or
 - include either an email address or a URL as part of each transaction
 request
+
 //-
 
 [NOTE]
@@ -66,8 +69,7 @@ https://docs.oracle.com/javase/8/docs/technotes/guides/security/xmldsig/Validate
 ====
 In case there is no format specified in the request then the format
 specified in the merchant configuration is used.
-If there is no IPN
-format in the configuration then NVP response is used for <<PP_RedirectUrlsIPNs, HPP/EPP requests>> or
+If there is no IPN format in the configuration, then NVP response is used for <<PP_RedirectUrlsIPNs, HPP/EPP requests>> or
 application/xml for others by default.
 Be aware that just *one* notification format can be set for all
 notifications sent to the specified URLs.
@@ -106,7 +108,7 @@ include::{root}/samples/json/GeneralPlatformFeatures_IPN_Json_JSON_Notification.
 ----
 
 .application/JSON-signed Notification Example
-[source,json,subs=attributes+]
+[source,subs=attributes+]
 ----
 include::{root}/samples/json/GeneralPlatformFeatures_IPN_Json_applicationJSONSignedNotificationExample.json[]
 ----
@@ -116,7 +118,7 @@ include::{root}/samples/json/GeneralPlatformFeatures_IPN_Json_applicationJSONSig
 To verify a signed notification, check the signature data against the
 Secret Key you received during merchant configuration:
 
-[source, java]
+[source,java]
 ----
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
