--- a/content/index/payment-methods/sofort/rest/11-31-sofort.adoc
+++ b/content/index/payment-methods/sofort/rest/11-31-sofort.adoc
@@ -40,13 +40,13 @@ at <<AppendixB,  Transaction Types>>.
 |===
 |Transaction Type |Description
 
-|_check-signature_ |Validates digital signature for a _Payment Page_
+| check-signature |Validates digital signature for a _Payment Page_
 transaction.
 
-|_get-url_ |A step in a group of transactions where the provider or
+| get-url |A step in a group of transactions where the provider or
 bank's URL is retrieved for the Account Holder to be redirected to.
 
-|_debit_ |Moves funds from the Consumer Account to the Merchant Account.
+| debit |Moves funds from the Consumer Account to the Merchant Account.
 |===
 
 [#Sofort_ReferenceTransaction]
@@ -106,6 +106,7 @@ image::images/11-31-sofort/Sofort_successful_transaction.png[Workflow of Success
 . Consumer is re-directed and logs in to his/her online banking account
 . Consumer confirms the payment
 . Consumer is re-directed to the Sofort confirmation page
+
 //-
 
 In the case of a successful payment, the consumer is redirected back to
@@ -126,7 +127,7 @@ the requested transaction.
 The following elements are mandatory (M), optional (O) or conditional
 \(C) for sending request/response/notification.
 
-[cols="15,10,10,10,10,10,35"]
+[cols="15m,10,10,10,10,10,35"]
 |===
 | Field | Request | Response | Notification | Data Type | Size | Description
 
@@ -257,6 +258,7 @@ width of 100 pixel.
 - _Sofort_ suggests a width between 100 and 300 pixel. To change the
 width from 100 pixel to e.g. 300 pixel, add "?width=300" directly after
 the format.
+
 //-
 
 The following is the general form of the link to the badge:
@@ -279,28 +281,28 @@ The following is the general form of the link to the badge:
 
 Go to <<GeneralPlatformFeatures_IPN_NotificationExamples, Notification Examples>>, if you want to see corresponding notification samples.
 
-.XML Get-Url Request (Successful)
+.XML get-url Request (Successful)
 
 [source,xml,subs=attributes+]
 ----
 include::{root}/samples/xml/sofortbanking_get-url_request_success.xml[]
 ----
 
-.XML Get-Url Response (Successful)
+.XML get-url Response (Successful)
 
 [source,xml,subs=attributes+]
 ----
 include::{root}/samples/xml/sofortbanking_get-url_response_success.xml[]
 ----
 
-.XML Get-Url Request (Failure)
+.XML get-url Request (Failure)
 
 [source,xml,subs=attributes+]
 ----
 include::{root}/samples/xml/sofortbanking_get-url_request_failure.xml[]
 ----
 
-.XML Get-Url Response (Failure)
+.XML get-url Response (Failure)
 
 [source,xml,subs=attributes+]
 ----
