--- a/content/index/payment-processing/08-01-cross-referencing.adoc
+++ b/content/index/payment-processing/08-01-cross-referencing.adoc
@@ -81,7 +81,7 @@ include::{root}/samples/xml/ideal_get-url_request__installment_first_72d9c4.xml[
 include::{root}/samples/xml/ideal_get-url_response__installment_first_8b4f66.xml[]
 ----
 
-.XML Debit Notification for iDEAL
+.XML debit Notification for iDEAL
 
 [source,xml,subs=attributes+]
 ----
@@ -147,6 +147,7 @@ include::{root}/samples/json/GeneralPlatformFeaturesCrossMerchantSamplesRecurrin
 ----
 include::{root}/samples/json/GeneralPlatformFeaturesCrossMerchantSamplesRecurringJson_JSON_SEPA_CreditResponseCrossMerchantPayment.json[]
 ----
+
 [#GeneralPlatformFeatures_CrossPayment]
 === Payment Methods
 
@@ -165,6 +166,7 @@ The main reasons for returned SEPA Direct Debit transaction are:
 
 - "Bank account not existing"
 - "Invalid bank data"
+
 //-
 
 Cross-Payment-Methods Referencing is available, when the merchant has
@@ -172,16 +174,19 @@ Cross-Payment-Methods Referencing is available, when the merchant has
 - several online banking payment methods configured within MAID.
 - installed {payment-gateway} backend and
 Payment Page integrations.
+
 //-
 
 Cross-Payment-Methods Referencing is executed in two steps:
 
-- The initial transaction is placed by the customer actively via one of
+The initial transaction is placed by the customer actively via one of
 the supported online banking payment methods:
-* Sofort.
-* iDEAL
-* giropay
-* eps-Überweisung
+
+- Sofort.
+- iDEAL
+- giropay
+- eps-Überweisung
+
 //-
 
 If the initial transaction is successful, the bank details IBAN and BIC
@@ -190,7 +195,7 @@ are saved in the database, but not returned in the response.
 NOTE: Not every bank provides bank account data. {payment-gateway}
 can only process bank account data if provided by the bank.
 
-- The subsequent transaction is a SEPA Direct Debit transaction.
+The subsequent transaction is a SEPA Direct Debit transaction.
 The merchant receives a transaction ID from the initial transaction
 which is used later to place a referenced SEPA Direct Debit transaction
 without knowing the bank account details as they are automatically
@@ -223,6 +228,7 @@ The advantages, setting it in the subsequent transaction are:
 not need to be amended.
 - If you are using SEPA as an additional payment option, the behavior
 where to send the periodic tags is identical.
+
 //-
 
 NOTE: API Endpoint for referenced transactions for alternative payment methods
@@ -253,7 +259,7 @@ include::{root}/samples/xml/ideal_get-url_request__installment_first_f11a91.xml[
 include::{root}/samples/xml/ideal_get-url_response__installment_first_7f38b0.xml[]
 ----
 
-.XML Debit Notification for Initial iDEAL
+.XML debit Notification for Initial iDEAL
 
 [source,xml,subs=attributes+]
 ----
